@@ -1,6 +1,6 @@
 Package: latentnet
 Version: 2.4-3
-Date: 2012-10-14
+Date: 2013-02-25
 Title:  Latent position and cluster models for statistical networks
 Authors@R: c(
 	   person("Pavel N.", "Krivitsky", role=c("aut","cre"), email="krivitsky@stat.psu.edu"),
